# memento-no-more

./: .env  .gitignore  .gitmodules  Makefile  PATENT  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  agent.py  async_retry_caller.py  clients.py  configs.py  history.py  stats.py  tips.py  tool_call_status.py  tool_calls.py  tools_python.py  trajectory.py  workspace.py
agent/interactive/: int_agent.py  int_clients.py  int_stats.py  int_tips.py  int_tools.py  int_trajectory.py  int_workspace.py  run_agent_adapter.py  run_agent_claude.py  run_agent_deepinfra.py  run_agent_deepseek.py  run_agent_mock.py  run_agent_openai.py  run_agent_vllm.py
benchmarking/humaneval/: __init__.py  humaneval_utils.py  run_humaneval.py
core/: __init__.py  chat_templates.py  concurrent.py  count_tokens.py  llm.py  messages.py  putils.py  ray_utils.py  steps.py  tags.py  usage.py  utils.py
filters/: OfficeBench_llm_filter_prompts.py  ToolQA_llm_filter_prompts.py  apply_filter.py  base.py  conversion_utils.py  filters.py  llm-based_evaluate_hints.py  reprompting.py  tool_call.py  xml_trajectory.py
scripts/: merge.py
tasks/: __init__.py  b_human_eval.py  base.py  batch_eval.py  data_collection_config.py  data_collection_config_ToolQA_generalization.py  grade.py  run_concurrent_GSM8K.py  run_concurrent_OfficeBench.py  run_concurrent_ToolQA.py  taskset.py
training/: __init__.py  losses.py  merge_adapter.py  merge_adapter_script.py  metrics.py  student_teacher_dataset.py  tiny_model.py  train_agent.py  train_config_toolqa_round1.py  train_utils.py
(+44 files in other folders)
